# OCCT-Light.gd

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  validate.sh
.github/scripts/: download-cached-artifact.sh
.github/workflows/: main.yml  retry-workflow.yml
demo/: .gitignore  export_presets.cfg  main.gd  main.gd.uid  main.tscn  project.godot  test_runner.gd
demo/addons/OCCT-Light.gd/: gdext.gdextension
demo/addons/ball_game_export/: .export_plugin.gd.kate-swp  export_plugin.gd  export_plugin.gd.uid  plugin.cfg  plugin.gd  plugin.gd.uid
demo/ball_game/: game.tscn  player.tscn  ui.gd  ui.gd.uid  ui.tscn  ui_overlay.tscn
demo/ball_game/audio/: background.ogg.import
demo/ball_game/fonts/: SourceCodePro-Regular.LICENSE.txt  SourceCodePro-Regular.ttf.import
demo/ball_game/materials/: glass.tres
demo/ball_game/materials/faces/: face_arrows.gdshader  face_arrows.gdshader.uid  faces.tres  rock_0001_ao_1k.jpg.import  rock_0001_color_1k.jpg.import  rock_0001_height_1k.png.import  rock_0001_normal_directx_1k.png.import  rock_0001_normal_opengl_1k.png.import  rock_0001_roughness_1k.jpg.import
demo/ball_game/scene/: scene.gd  scene.gd.uid  scene.glb.LICENSE.txt  scene.glb.import
demo/ball_game/scripts/: end_area.gd.uid
demo/ball_game/scripts/components/: audio_manager.gd  audio_manager.gd.uid  audio_wiring.gd  audio_wiring.gd.uid  death_area.gd  end_area.gd  maze_aux_path.gd.uid  maze_generator.gd  maze_markers.gd  maze_markers.gd.uid  maze_obstacles.gd  maze_obstacles.gd.uid  maze_path_follow.gd  maze_paths.gd  ocl_mesh_builder.gd  outside_sphere.gd  outside_sphere.gd.uid  ui_overlay.gd  ui_overlay.gd.uid
demo/ball_game/scripts/helpers/: curve_utils.gd  curve_utils.gd.uid  graph_utils.gd  graph_utils.gd.uid  occt_conversion_utils.gd  occt_conversion_utils.gd.uid  profile_builder.gd  profile_builder.gd.uid  rope_physics.gd  rope_physics.gd.uid  test.py  topo_builders.gd  topo_builders.gd.uid  wire_builder.gd
demo/ball_game/scripts/player/: ball.gd  ball.gd.uid  camera_rig.gd  player.gd  touch_joystick.gd  touch_joystick.gd.uid  touch_jump_button.gd  touch_jump_button.gd.uid  touch_restart_button.gd  touch_restart_button.gd.uid
demo/ball_game/scripts/tools/: chunk_builder.gd  chunk_builder.gd.uid  spawner.gd
demo/ball_game/scripts/ui/: settings.gd  settings.gd.uid  timer_hud.gd  timer_hud.gd.uid
demo/ball_game/theme/: theme_dark.tres
demo/demo/: .gitignore  demo.tscn  maze_generator.gd  maze_generator.gd.uid  maze_ocl_manager.gd  maze_ocl_manager.gd.uid  maze_path.gd  maze_path.gd.uid  maze_path_follow.gd  maze_path_follow.gd.uid  outside.gd  outside.gd.uid  player.tscn  stl_importer.gd
demo/demo/materials/: glass.tres
demo/demo/materials/faces/: face_arrows.gdshader  faces.tres
demo/demo/scripts/: end_area.gd
demo/demo/scripts/components/: death_area.gd  inside_sphere.gd  inside_sphere.gd.uid  maze_aux_path.gd  maze_generator.gd  maze_generator.gd.uid  maze_path.gd  maze_path.gd.uid  maze_path_follow.gd  maze_path_follow.gd.uid  maze_paths.gd  maze_paths.gd.uid  ocl_mesh_builder.gd  ocl_mesh_builder.gd.uid  outside_sphere.gd
demo/demo/scripts/helpers/: curve_utils.gd  graph_utils.gd  mesh_export_utils.gd  mesh_export_utils.gd.uid  occt_conversion_utils.gd  (+9 more)
demo/tests/: back_button.gd  back_button.gd.uid  back_button.tscn  index.gd  index.gd.uid  runner.gd  test_Manual_OcctlGodot.gd  test_Manual_OcctlGodot.gd.uid  test_OclDemoOnlyRopePhysics.gd  test_OclDemoOnlyRopePhysics.gd.uid  test_OclGodotMesher.gd  test_OclGodotMesher.gd.uid  test_OclGraphHandle.gd.uid  test_OclMeshToGodot.gd  test_OclMeshToGodot.gd.uid  test_OclRopePhysics.gd  test_OclRopePhysics.gd.uid  test_autowrapper.gd  test_autowrapper.gd.uid  test_cad_workflows.gd  test_cad_workflows.gd.uid  test_chunk_builder.gd  test_chunk_builder.gd.uid  test_face_profiles.gd  test_face_profiles.gd.uid  test_feature_operations.gd  test_feature_operations.gd.uid  test_geometry_vector.gd  test_geometry_vector.gd.uid  test_import_export.gd  test_import_export.gd.uid  test_obstacles.gd  test_obstacles.gd.uid  test_placement_helpers.gd  test_placement_helpers.gd.uid  test_primitives_and_transforms.gd  test_primitives_and_transforms.gd.uid  test_profile_primitives.gd  test_profile_primitives.gd.uid  test_select_iter.gd  (+10 more)
doc_classes/: Axis.xml  CadPlane.xml  CircleWire.xml  Compound.xml  Edge.xml  EllipseWire.xml  Face.xml  GeometryVector.xml  Location.xml  OclDemoOnlyRopePhysics.xml  OclGodotMesher.xml  OclMeshToGodot.xml  PolygonWire.xml  RectangleRoundedWire.xml  RectangleWire.xml  RegularPolygonWire.xml  ShapeList.xml  Shell.xml  SlotOverallWire.xml  Solid.xml  SolidBox.xml  SolidCone.xml  SolidCylinder.xml  SolidSphere.xml  SolidTorus.xml  SolidWedge.xml  TopoShape.xml  Vertex.xml  Wire.xml
doc_classes/autowrapper/: OcctlCoreWrapper.xml  OcctlRuntimeInitInfoTHandle.xml  Uint64THandle.xml
src/: Axis.cpp  Axis.h  CircleWire.cpp  CircleWire.h  Compound.cpp  Compound.h  Edge.cpp  Edge.h  EllipseWire.cpp  EllipseWire.h  Face.cpp  Face.h  GeometryVector.cpp  GeometryVector.h  Location.cpp  Location.h  OCCTUtils.h  OclDemoOnlyRopePhysics.cpp  OclDemoOnlyRopePhysics.h  OclGodotMesher.cpp  OclGodotMesher.h  OclMeshToGodot.cpp  OclMeshToGodot.h  OclRopePhysics.cpp  OclRopePhysics.h  OclTopoExtra.cpp  OclTopoExtra.h  OpenCascadeVersion.cpp  OpenCascadeVersion.h  Plane.cpp  Plane.h  PolygonWire.cpp  PolygonWire.h  RectangleRoundedWire.cpp  RectangleRoundedWire.h  RectangleWire.cpp  RectangleWire.h  RegularPolygonWire.cpp  RegularPolygonWire.h  ShapeList.cpp  (+27 more)
src/autowrapper/: .autowrapper_cache.json  OcctlCoreWrapper.cpp  OcctlCoreWrapper.h  module.cpp  module.h
src/convert/: OcctlConvert.cpp  OcctlConvert.h  OcctlGodot.cpp  OcctlGodot.h
tools/: build_godot_web_templates.sh  repair_wasm.py  web_editor_preload.html
vcpkg_ports/gdext/: portfile.cmake  vcpkg.json
vcpkg_ports/occtl/: portfile.cmake  vcpkg.json
vcpkg_ports/opencascade/: 0006-standard-assert-always-print-on-posix.patch  portfile.cmake  vcpkg.json
vcpkg_triplets/: universal-osx.cmake  wasm32-emscripten.cmake
(+63 files in other folders)
